--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ packaging==24.2
 pandas==2.2.3
 platformdirs==4.3.7
 pooch==1.8.2
+psutil==7.1.0
 python-dateutil==2.9.0.post0
 pytz==2025.1
 requests==2.32.3
